# cmake_gtest_template

./: .gitignore  CMakeLists.txt  README.md
include/: greeter.h
source/: CMakeLists.txt  greeter.c  main.c
test/: CMakeLists.txt  greeter-test.cpp
