############################################
############# CMAKE HEADER #################
############################################

cmake_minimum_required(VERSION 2.6)
project(greeter)

############################################
############# MAIN TARGETS  ################
############################################

add_executable(greeter source/greeter.c source/main.c)

############################################
############# TEST TARGETS  ################
############################################

add_subdirectory(test EXCLUDE_FROM_ALL)
